feat: add pip
